Allow revision-target next to pick commits until max-risk is achieved